--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.26",
+        "sass": "^1.63.6",
+        "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
+    },
+    "require": {
+        "vendor/package": "1.3.2",
+        "vendor/package2": "1.*",
+        "vendor/package3": "^2.0.3"
     }
 }
